Ajdusted compile configurations.

--- a/Sniffer/Sniffer.csproj
+++ b/Sniffer/Sniffer.csproj
@@ -197,6 +197,12 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ipaddresscontrollib\IPAddressControlLib\IPAddressControlLib.csproj">
+      <Project>{804eae0f-f93e-46c2-ac10-bd2bfdcadd92}</Project>
+      <Name>IPAddressControlLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
